Add responsive home-1

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -175,6 +175,14 @@ section,
   .container {
       max-width: 1194px;
   }
+  .container-lg {
+    max-width: 1584px;
+  }
+}
+
+
+@include media-only(1400px, min) {
+  
 }
 
 
