--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -14,4 +14,7 @@
 @import "lo-funeral";
 @import "lo-obituaries-location";
 @import "lo-pay-tribute";
+@import "lo-blog";
+@import "lo-app-download";
+@import "lo-social-list";
 
