--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -52,7 +52,7 @@
 
     &--style-2 {
         border: 1px solid transparent;
-        padding: 36px 0 30px;
+        padding: 36px 46px 30px;
         .icon {
             width: 150px;
             height: 150px;
@@ -74,16 +74,18 @@
             }
         }
         .date {
-            border-radius: 6px;
-            border: 1px solid #B0D0D2;
-            padding: 0 0;
-            display: inline-block;
-            color: $color-primary;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: normal;
-            padding: 6px 12px;
-            margin-bottom: 17px;
+            span {
+                border-radius: 6px;
+                border: 1px solid #B0D0D2;
+                padding: 0 0;
+                display: inline-block;
+                color: $color-primary;
+                font-size: 14px;
+                font-weight: 500;
+                line-height: normal;
+                padding: 6px 12px;
+                margin-bottom: 17px;
+            }
         }
         .card-title {
             margin-bottom: 4px;
@@ -105,13 +107,14 @@
             }
         }
     }
-    &--style-3 { 
+    &--style-3 {
         padding: 20px;
         .image-item {
             border-radius: 12px;
             overflow: hidden;
             img {
                 width: 100%;
+                @include transition;
             }
             margin-bottom: 15px;
         }
@@ -130,6 +133,12 @@
         }
         &:hover {
             box-shadow: 8px 8px 48px 0px rgba(1, 74, 79, 0.12);
+            
+            .image-item {
+                img {
+                    transform: scale(1.15);
+                }
+            }
         }
     }
 }
