--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -25,7 +25,7 @@
         }
 
         .hero-content {
-            padding-top: 0;
+            padding: 120px 0 80px 0;
             @include media-only ('md', min) {
                 padding: 180px 0;
             }
@@ -43,6 +43,8 @@
             .hero-title {
                 color: $color-white;
                 position: relative;
+
+                // @include media-only ()
             }
 
             .searchbox-container {
@@ -89,6 +91,47 @@
                 right: 0;
                 bottom: 0;
             }
+        }
+    }
+
+    &--style-2 {
+        padding: 140px 0 140px 0;
+        position: relative;
+        z-index: 0;
+        .hero-content {
+            padding: 0;
+            .subtitle {
+                color: #B0D0D2;
+                font-weight: 400;
+            }
+        }
+        .hero-group-img {
+
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url("../images/hero/hero-bg-img-1.png");
+            @include background-content;
+            // width: 100%;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: -1;
+            filter: grayscale(100%);
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            background: linear-gradient(180deg, rgba(1, 74, 79, 0.90) 0%, #014A4F 100%);
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: -1;
+            // filter: grayscale(100%);
         }
     }
 }
