Add Home-2: recent-obituaries-section

--- a/scss/layouts/_lo-funeral.scss
+++ b/scss/layouts/_lo-funeral.scss
@@ -40,4 +40,20 @@
             }
         }
     }
+
+    .shape-parallax-list {
+        li {
+            position: absolute;
+            z-index: -1;
+            &:nth-child(1) {
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+            &:nth-child(2) {
+                left: 0;
+                bottom: 0;
+            }
+        }
+    }
 }
