--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -104,6 +104,12 @@
                 color: #B0D0D2;
                 font-weight: 400;
             }
+
+            .searchbox-container  {
+                .searchbox-textfield {
+                    width: 47%;
+                }
+            }
         }
         .hero-group-img {
 
