--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -141,4 +141,117 @@
             }
         }
     }
+    &--style-4 {
+        padding: 0;
+        border: none;
+        overflow: hidden;
+        .img-item {
+            img {
+                width: 100%;
+                filter: grayscale(100%);
+                @include transition;
+            }
+        }
+        .content {
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 4.87%, #000 100%);
+            opacity: 0.9;
+            position: absolute;
+            padding: 150px 30px 30px 30px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            .card-title {
+                margin-bottom: 5px;
+                a {
+                    color: $color-white;
+                }
+            }
+            .date {
+                color: $color-white;
+                margin-bottom: 11px;
+            }
+            .tag-list {
+                li {
+                    a {
+                        border-radius: 6px;
+                        border: 1px solid $color-secondary;
+                        background: rgba(244, 161, 0, 0.15);
+                        padding: 3px 10px;
+                        color: $color-secondary;
+                        font-size: 16px;
+                        font-weight: 400;
+                        line-height: normal;
+
+                        &:hover {
+                            background-color: $color-secondary;
+                            color: $color-white;
+                        }
+                    }
+                }
+            }
+        }
+
+        &:hover {
+            background: none;
+            border: none;
+            box-shadow: none;
+
+            .img-item {
+                img {
+                    filter: grayscale(0);
+                }
+            }
+        }
+    }
+    &--style-5 {
+        padding: 15px;
+        .icon {
+            width: 100%;
+            height: auto;
+            border-radius: 12px;
+            margin-bottom: 0;
+            position: relative;
+            z-index: 0;
+            img {
+                filter: grayscale(100%);
+                @include transition;
+            }
+        }
+        .content {
+            position: relative;
+            z-index: 2;
+            top: -32px;
+            .date {
+                margin-bottom: 15px;
+                padding-top: 10px;
+                span {
+                    color: $color-text;
+                    font-size: 14px;
+                    font-weight: 500;
+                    line-height: normal;
+                }
+            }
+            .card-title {
+                margin-bottom: 7px;
+            }
+            .card-info {
+                margin-bottom: 0;
+            }
+            .date-shape {
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: -1;
+            }
+        }
+        &:hover {
+            .icon {
+                img {
+                    filter: grayscale(0);
+                }
+            }
+        }
+    }
 }
+
