--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -18,4 +18,13 @@
 @import "lo-app-download";
 @import "lo-social-list";
 @import "lo-feature";
+@import "lo-rating-list";
+@import "lo-working-steps";
+@import "lo-faq";
+@import "lo-contact-section";
+@import "lo-header-topbar";
+@import "lo-search-filter";
+@import "lo-counter";
+@import "lo-pricing";
+@import "lo-popular-product";
 
