--- a/scss/layouts/_lo-social-list.scss
+++ b/scss/layouts/_lo-social-list.scss
@@ -3,4 +3,21 @@
     li {
         
     }
+
+    &--style-2 {
+        .social-item {
+            a {
+                width: 28px;
+                height: 28px;
+                border-color: transparent;
+                border-radius: 50%;
+                background-color: $color-primary;
+                color: $color-white;
+
+                i {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
