--- a/scss/components/_cp-counter.scss
+++ b/scss/components/_cp-counter.scss
@@ -1,17 +1,25 @@
 .rt-counter-item {
     gap: 15px;
-    background: #FFFFFF;
-    border-radius: 20px;
-    padding: 33px 34px;
     @include transition;
+
+    .icon-wrapper {
+        position: relative;
+        z-index: 0;
+        .icon {
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.10) 50%, rgba(255, 255, 255, 0.00) 100%);
+            width: 80px;
+            height: 80px;
+            @include transition;
+        }
+    }
+
     .item-title {
         h3 {
-            font-family: $font-roboto;
+            @include toRem(font-size, 38);
+            color: $color-white;
             font-weight: 700;
-            @include toRem(font-size, 30);
-            line-height: 35px;
-            color: $color-title;
-            margin-bottom: 6px;
+            line-height: 26px;
+            margin-bottom: 16px;
         }
 
         .label {
@@ -19,17 +27,13 @@
             font-weight: 400;
             @include toRem(font-size, 18);
             line-height: 21px;
-            color: $color-title;
+            color: #859D9E;
         }
     }
-    
-    &--style-1 {
-        width: 240px;
-        height: 140px;
-        transition: all 0.3s ease-in-out;
-        &:hover {
-            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25);
-            transform: translateY(-10px);
+
+    &:hover {
+        .icon {
+            background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.10) 50%, rgba(255, 255, 255, 0.00) 100%);
         }
     }
 }
