--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -16,7 +16,7 @@
         @include transition;
         display: inline-block;
     }
-    .card-title {
+    .title {
         margin-bottom: 19px;
         a {
             color: $color-title;
@@ -63,7 +63,7 @@
             display: inline-block;
 
             .obituary-img {
-                filter: grayscale(100%);
+                // filter: grayscale(100%);
                 width: 100%;
                 height: 100%;
                 @include transition;
@@ -87,7 +87,7 @@
                 margin-bottom: 17px;
             }
         }
-        .card-title {
+        .title {
             margin-bottom: 4px;
         }
         .card-info {
@@ -102,7 +102,7 @@
             box-shadow: 8px 8px 48px 0px rgba(1, 104, 111, 0.12);
             .icon {
                 .obituary-img {
-                    filter: grayscale(0);
+                    filter: grayscale(100%);
                 }
             }
         }
@@ -123,7 +123,7 @@
             .meta-data {
                 margin-bottom: 11px;
             }
-            .card-title {
+            .title {
                 margin-bottom: 8px;
             }
             .card-info { 
@@ -160,10 +160,13 @@
             bottom: 0;
             left: 0;
             right: 0;
-            .card-title {
+            .title {
                 margin-bottom: 5px;
                 a {
                     color: $color-white;
+                    &:hover {
+                        color: $color-secondary;
+                    }
                 }
             }
             .date {
@@ -199,12 +202,13 @@
             .img-item {
                 img {
                     filter: grayscale(0);
+                    transform: scale(1.07);
                 }
             }
         }
     }
     &--style-5 {
-        padding: 15px;
+        padding: 15px 15px 0 15px;
         .icon {
             width: 100%;
             height: auto;
@@ -213,6 +217,7 @@
             position: relative;
             z-index: 0;
             img {
+                width: 100%;
                 filter: grayscale(100%);
                 @include transition;
             }
@@ -231,15 +236,18 @@
                     line-height: normal;
                 }
             }
-            .card-title {
+            .title {
                 margin-bottom: 7px;
             }
             .card-info {
                 margin-bottom: 0;
+                svg {
+                    margin-right: 5px;
+                }
             }
             .date-shape {
                 position: absolute;
-                top: 0;
+                top: 1px;
                 left: 50%;
                 transform: translateX(-50%);
                 z-index: -1;
@@ -249,8 +257,154 @@
             .icon {
                 img {
                     filter: grayscale(0);
+                    transform: scale(1.12);
                 }
             }
+        }
+    }
+    &--style-6 { 
+        padding: 45px 30px 35px;
+        border: 1px solid #E6F0F1;
+        border-radius: 16px;
+        .icon {
+            width: 104px;
+            height: 104px;
+            outline: 1px solid #E6F0F1;
+            outline-offset: 4px;
+            img {
+                width: 100%;
+            }
+            margin-bottom: 33px;
+        }
+        .card-info {
+            padding: 0 20px;
+            border-bottom: 1px solid #E6F0F1;
+            padding-bottom: 25px;
+            margin-bottom: 18px;
+        }
+        .title {
+            margin-bottom: 0;
+            a {
+                color: $color-primary;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 28px;
+                text-transform: uppercase;
+            }
+        }
+
+        &:hover {
+            box-shadow: 8px 8px 48px 0px rgba(1, 104, 111, 0.12);
+            background-color: $color-white;
+        }
+    }
+
+    &--style-7 {
+        gap: 30px;
+        border-radius: 16px;
+        border: 1px solid #DCE0E1;
+        background: $color-white;
+        padding: 20px;
+        .icon {
+            width: 180px;
+            height: 180px;
+            border-radius: 10px;
+            margin-bottom: 0;
+        }
+        .content {
+            .id {
+                margin-bottom: 15px;
+                span {
+                    border-radius: 6px;
+                    padding: 6px;
+
+                    &:hover {
+                        color: $color-white;
+                        background-color: $color-primary;
+                        cursor: pointer;
+                    }
+                }
+            }
+            .title {
+                margin-bottom: 10px;
+            }
+            .text-content {
+                li {
+                    span {
+                        width: 68px;
+                        display: inline-block;
+                    }                
+                }
+            }
+        }
+
+        .rose-shape {
+            position: absolute;
+            top: 34px;
+            right: 0;
+        }
+
+        &:hover {
+            box-shadow: none;
+            border: 1px solid $color-primary;
+            .rose-shape {
+                svg {
+                    fill: #01686F !important;
+                    @include transition;
+                }
+            }
+        }
+    }
+
+    &--style-8 {
+        border: none;
+        padding: 20px;
+        .image-item {
+            position: relative;
+            img {
+                width: 100%;
+            }
+            border-radius: 12px;
+            overflow: hidden;
+            margin-bottom: 20px;
+
+            .meta-entry {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                z-index: 1;
+                li {
+                    a {
+                        width: 34px;
+                        height: 34px;
+                        background-color: $color-white;
+                        color: $color-text;
+                        &:hover {
+                            background-color: $color-primary;
+                            color: $color-white;
+                        }
+                    }
+                }
+            }
+        }
+        .content {
+            .title {
+                font-size: 20px;
+                font-weight: 400;
+                color: $color-text;
+                margin-bottom: 7px;
+            }
+            .price {
+                color: $color-title;
+                font-size: 20px;
+                font-weight: 700;
+                line-height: normal;
+            }
+        }
+
+        &:hover {
+            border: none;
+            box-shadow: none;
         }
     }
 }
