--- a/scss/layouts/_lo-blog.scss
+++ b/scss/layouts/_lo-blog.scss
@@ -4,6 +4,7 @@
     @include media-only ('lg', min) {
         padding-bottom: 200px;
     }
+
     .shape-parallax-list {
         li {
             position: absolute;
@@ -17,6 +18,17 @@
                 bottom: -120px;
                 opacity: 0.3;
             }
+        }
+    }
+
+    &--style-2 {
+        background-color: #F1F8F8;
+        .rt-card {
+            border-color: transparent;
+        }
+        @include media-only ('lg', min) {
+            padding-top: 270px;
+            padding-bottom: 120px;
         }
     }
 }
