--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -98,6 +98,10 @@
         padding: 140px 0 140px 0;
         position: relative;
         z-index: 0;
+        @include media-from-to(992px, min, 1200px, max ) {
+            padding: 250px 0 150px 0;
+        }
+
         .hero-content {
             padding: 0;
             .subtitle {
@@ -107,7 +111,10 @@
 
             .searchbox-container  {
                 .searchbox-textfield {
-                    width: 47%;
+                    width: 25%;
+                    @include media-only ('lg', min) {
+                        width: 47%;
+                    }
                 }
             }
         }
@@ -132,6 +139,61 @@
             content: "";
             position: absolute;
             background: linear-gradient(180deg, rgba(1, 74, 79, 0.90) 0%, #014A4F 100%);
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: -1;
+            // filter: grayscale(100%);
+        }
+    }
+
+    &--style-3 {
+        padding: 270px 0 140px 0;
+        position: relative;
+        z-index: 0;
+        @include media-from-to(992px, min, 1200px, max ) {
+            padding: 250px 0 150px 0;
+        }
+
+        .hero-content {
+            padding: 0;
+            .subtitle {
+                color: #B0D0D2;
+                font-weight: 400;
+            }
+
+            .searchbox-container  {
+                .searchbox-textfield {
+                    width: 25%;
+                    @include media-only ('lg', min) {
+                        width: 47%;
+                    }
+                }
+            }
+        }
+        .hero-group-img {
+
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url("../images/hero/hero-bg-img-3.png");
+            @include background-content;
+            // width: 100%;
+            left: 0;
+            right: 0;
+            // top: 0;
+            bottom: 0;
+            z-index: 0;
+            filter: grayscale(100%);
+            height: 375px;
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            background-color: #01686F;
             left: 0;
             right: 0;
             top: 0;
