--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -36,5 +36,7 @@
 @import "lo-sidebar-filter";
 @import "lo-obituaries-grid";
 @import "lo-blog-details";
+@import "lo-comment";
+@import "lo-comment-post-form";
 
 
