--- a/scss/layouts/_lo-breadcrumb.scss
+++ b/scss/layouts/_lo-breadcrumb.scss
@@ -34,7 +34,7 @@
     }
 
     &::before {
-        content: url("../../images/breadcrumb/breadcrumb-bg-texture.png");
+        content: url("../images/breadcrumb/breadcrumb-bg-texture.png");
         position: absolute;
         height: 219px;
         left: 0;
