Add complete blog-details page

--- a/scss/layouts/_lo-blog-details.scss
+++ b/scss/layouts/_lo-blog-details.scss
@@ -12,6 +12,7 @@
             padding: 20px;
             img {
                 border-radius: 12px;
+                width: 100%;
             }
         }
         .single-content-wrap {
