--- a/scss/layouts/_lo-comment.scss
+++ b/scss/layouts/_lo-comment.scss
@@ -41,7 +41,7 @@
     .avatar {
         img {
             border-radius: 12px;
-            width: 100%;
+            // width: 100%;
         }
     }
     .comment-content {
