Add obituaries details

--- a/scss/components/__components-dir.scss
+++ b/scss/components/__components-dir.scss
@@ -35,7 +35,9 @@
 @import 'cp-working-step-item';
 @import 'cp-experience-card';
 @import 'cp-view-buttons';
-@import './cp-author-info-box';
+@import 'cp-author-info-box';
+@import 'cp-tab-menu';
+@import 'cp-post-author-info';
 
 
 
