--- a/scss/components/_cp-contact-infobox.scss
+++ b/scss/components/_cp-contact-infobox.scss
@@ -90,5 +90,40 @@
             }
         }
     }
+
+    &--style-3 {
+        margin-bottom: 24px;
+        .icon {
+            width: 40px;
+            height: 40px;
+            color: $color-white;
+            background-color: #E6F0F1;
+            i {
+                font-size: 18px;
+                color: $color-primary;
+            }
+        }
+
+        .content {
+            flex: 1;
+            .info-text {
+                color: #576767;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 24px; 
+            }
+            .number {
+                a {
+                    color: $color-title;
+                }
+            }
+    
+        }
+        &::before { 
+            display: none;
+        }
+    }
+
+
 }
 
