--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -38,5 +38,8 @@
 @import "lo-blog-details";
 @import "lo-comment";
 @import "lo-comment-post-form";
+@import "lo-obituaries-details";
+@import "lo-tab-menu-section";
+@import "lo-tab-content";
 
 
